--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -2689,7 +2689,7 @@ for (naam in names(all_models)) {
 ```{r}
 final_models_complex <- list(
   Blauwborst = Blauwborst_distmod_2018_2022_hn1,
-  BruineKiekendief_zonder_broedcode = BruineKiekendief_zonder_broedcode_distmod_2018_2022_hn1,                       
+  BruineKiekendief_zonder_broedcode = BruineKiekendief_zonder_broedcode_distmod_2018_2022_hn1,                      
   Buizerd = Buizerd_distmod_2018_2022_hn1,
   Buizerd_zonder_broedcode = Buizerd_zonder_broedcode_distmod_2018_2022_hn1,
   Ekster = Ekster_distmod_2018_2022_hr1,
@@ -2969,7 +2969,8 @@ for (naam in names(final_models)) {
 #### Problematische soorten
 
 ```{r}
-spec_to_remove <- c("GroeneSpecht", "GroteBonteSpecht")
+spec_to_remove <- c("BlauweKiekendief_zonder_broedcode", "GroeneSpecht", 
+                    "GroteBonteSpecht")
 ```
 
 De data voor `r spec_to_remove` passen niet voor distance sampling.
@@ -2993,7 +2994,10 @@ spec_to_bin <- list(Blauwborst = 6,
                     Haas = 4,
                     Holenduif = 3,
                     Roodborsttapuit = 4,
+                    Slechtvalk_zonder_broedcode = 4,
+                    Sperwer_zonder_broedcode = 4,
                     Torenvalk = 6,
+                    Torenvalk_zonder_broedcode = 3,
                     Tuinfluiter = 3,
                     Veldleeuwerik = 6)
 ```
@@ -3140,7 +3144,7 @@ for (naam in names(final_models_binned)) {
 
 ### Resultaten
 
-We hebben de densiteiten kunnen schatten van `r length(final_models_update)` soorten.
+We hebben de densiteiten kunnen schatten van `r length(unique(gsub("_zonder_broedcode", "", names(final_models_update))))` soorten.
 De volgende tabel geeft een overzicht van de soorten en de finale modellen die gefit zijn.
 
 ```{r}
@@ -3519,6 +3523,7 @@ final_models_2022 <- list(
   BruineKiekendief = BruineKiekendief_distmod_2022_hn1_simpel,
   BruineKiekendief_zonder_broedcode = BruineKiekendief_zonder_broedcode_distmod_2022_hr1_simpel,
   Buizerd = Buizerd_distmod_2022_hr1_simpel,
+  Buizerd_zonder_broedcode = Buizerd_zonder_broedcode_distmod_2022_hr7,
   Ekster = Ekster_distmod_2022_hn1_simpel,
   Fazant = Fazant_distmod_2022_hr7,
   Gaai = Gaai_distmod_2022_hn1_simpel,
@@ -3556,6 +3561,7 @@ final_models_2022 <- list(
   Tjiftjaf = Tjiftjaf_distmod_2022_hn2,
   Torenvalk = Torenvalk_distmod_2022_hr5,
   TurkseTortel = TurkseTortel_distmod_2022_hr1_simpel,
+  Torenvalk_zonder_broedcode = Torenvalk_zonder_broedcode_distmod_2022_hr3,
   Veldleeuwerik = Veldleeuwerik_distmod_2022_hr7,
   Vink = Vink_distmod_2022_hn8,
   WildeEend = WildeEend_distmod_2022_hn1_simpel,
@@ -3735,7 +3741,8 @@ for (naam in names(final_models_2022)) {
 #### Problematische soorten
 
 ```{r}
-spec_to_remove <- c("BruineKiekendief", "Roek")
+spec_to_remove <- c("BruineKiekendief", "BruineKiekendief_zonder_broedcode", 
+                    "Roek")
 ```
 
 
@@ -3765,6 +3772,7 @@ spec_to_bin_2022 <- list(GeleKwikstaart = 4,
                       Kwartel = 6,
                       Rietzanger = 4,
                       Ringmus = 3,
+                      Torenvalk_zonder_broedcode = 6,
                       Veldleeuwerik = 6,
                       WildeEend = 4,
                       WitteKwikstaart = 6,
@@ -4005,7 +4013,7 @@ for (naam in names(final_models_2022_binned)) {
 
 ### Resultaten
 
-We hebben de densiteiten kunnen schatten van `r length(final_models_2022_update)` soorten.
+We hebben de densiteiten kunnen schatten van `r length(unique(gsub("_zonder_broedcode", "", names(final_models_2022_update))))` soorten.
 De volgende tabel geeft een overzicht van de soorten en finale modellen die gefit zijn.
 
 ```{r}
